--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
               <form class="text-center form1" action="/#contact" data-netlify="true">
                 <input type="text" name="name" id="name1" placeholder="Full Name">
                 <input type="email" name="email" id="email1" placeholder="Email">
+                <input type="text" name="designation" id="designation1" placeholder="Designation (Optional)">
                 <textarea name="message" id="message1"cols="30" rows="10" placeholder="Message"></textarea>
                 <div class="text-center" data-netlify-recaptcha="true"></div>  
                 <input type="submit" value="Send Me a Message!">  
