--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   <h3 class="text-center">My Experiences</h3>
                   <ul class="timeline text-justify">
                     <li>
-                      <div class="card card1">
+                      <div class="card card1 c1">
                         <section class="front" style=" padding: 10px;">
                           <h4><span>2020 </span>Summer Intern at MRN Digital</h4>
                           <span>Responsibilities:</span>
@@ -182,7 +182,7 @@
                             <br>3. Used Redux for state management.</span><br>
                             
                             <b>Duration</b> - June 2020 - Jul 2020<br>
-                          <b>Location</b> - Work From Home<span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">[CLICK/TOUCH AND HOLD]</span>
+                          <b>Location</b> - Work From Home<span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">Click for More</span>
                         </section>
                         <section class="back text-center" style="padding-top:200px;height: 500px;background: #fff; margin-top: auto;margin-bottom: auto;">
                           <img src="assets/img/MRN.png">
@@ -190,13 +190,13 @@
                       </div>
                     </li>
                     <li>
-                      <div class="card card1">
+                      <div class="card card1 c2">
                         <section class="front" style="padding: 10px;">
                           <h4><span>2019 </span>Summer Intern at WSS</h4>
                           <span>Responsibilities:</span>
                           <span>I was responsible to make an automated WhatsApp newsletter, which responds automatically to messages, manages the subscribers (add or delete). In the initial stages, used Tkinter for GUI, and the entire logic was written in Python with the help of selenium and web scraping, whereas the database was stored in a CSV file. Thereafter, used Django to make the product more versatile. I handled both, the front end and the back end.</span><br>
                           <b>Duration</b> - May 2019-Jul 2019<br>
-                          <b>Location</b> - Mumbai, Maharashtra<span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">[CLICK/TOUCH AND HOLD]</span>
+                          <b>Location</b> - Mumbai, Maharashtra<span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">Click for More</span>
                         </section>
                         <section class="back text-center" style="background: #000;margin-top: auto;margin-bottom: auto;">
                           <img src="assets/img/8.png" height="500px">
@@ -204,13 +204,13 @@
                       </div>
                     </li>
                     <li>
-                      <div class="card card1">
+                      <div class="card card1 c3">
                         <section class="front" style=" padding: 10px;">
                           <h4><span>2019 </span>Marketing Manager At LegalMind</h4>
                           <span>Responsibilities:</span><br>
                           <span>Managed a team of 15 people and worked together in order to get the best out of each of them. Worked closely with the design team and worked on various ideas as well. Also was responsible for the strategies to get more pan India exposure for the company, along with recruiting some legitimate set of individuals for the campus ambassador position.</span><br>
                           <b>Duration</b> - Jul 2019- Dec 2019<br>
-                          <b>Location</b> - VIT,Vellore<br><span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">[CLICK/TOUCH AND HOLD]</span>
+                          <b>Location</b> - VIT,Vellore<br><span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">Click for More</span>
                         </section>
                         <section class="back text-center" style="background: #000;margin-top: auto;margin-bottom: auto;">
                           <img src="assets/img/1_more.png" height="500px">
@@ -321,7 +321,7 @@
                     <div class="card-body">            
                       <h4>Google Foobar Challenge</h4>
                       <p class="card-description">
-                        Competed in the Google's famous challenge and was one of the few to pass all the five levels. Used complex algorithmic concepts like Burnside's Lemma and Cellular Automata to solve these challenges.
+                        Competed in the Google's famous challenge and was one of the few to pass all the five levels. Used complex algorithmic concepts like Burnside's Lemma and Cellular Automata.
                       </p>
                     </div>              
                   </div>
@@ -390,7 +390,7 @@
               <div class="col-md-5 offset-md-1">
                 <ul class="timeline text-justify">
                   <li>
-                    <div class="card card1">
+                    <div class="card card1 c4">
                       <section class="front" style=" padding: 10px;">
                         <h4><span>2018 </span>Swatcch Bharat Abhiyan Summer Intern</h4>
                         <span>Initiatives:</span>
@@ -398,7 +398,7 @@
                           <br>I went to Dujana, a small village in Gautam Buddha Nagar and was responsible to spread awareness about the importance of sanitation. Every week, my team mate and I engaged in 'safai abhiyaan' where we would clean up the streets everyday and spread awareness about sanitation.<br>I was awarded Rs. 30000 for my exceptional service with which I helped two disadvantaged families for the next 2 months. 
                           </span>
                           <br>
-                        <span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">[CLICK/TOUCH AND HOLD]</span>
+                        <span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">Click for More</span>
                       </section>
                       <section class="back text-center" style="background: #fff; margin-top: auto;margin-bottom: auto;">
                         <img src="assets/img/7.png">
@@ -410,7 +410,7 @@
               <div class="col-md-5 ">
                 <ul class="timeline text-justify">
                   <li>
-                    <div class="card card1">
+                    <div class="card card1 c5">
                       <section class="front" style=" padding: 10px;">
                         <h4><span>2015 </span>Community Mobilizer at Teach India, TOI</h4>
                         <span>About the program:</span>
@@ -419,7 +419,7 @@
                           <br> My responsibility was to mobilize the community and make them understand the importance of english in today's world and making them understand that the only key to success is good education. 
                         </span>
                           <br>
-                        <span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">[CLICK/TOUCH AND HOLD]</span>
+                        <span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">Click for More</span>
                       </section>
                       <section class="back text-center" style="background: #fff; margin-top: auto;margin-bottom: auto;">
                         <img src="assets/img/4.png">
@@ -433,13 +433,13 @@
               <div class="col-md-5 offset-md-3">
                 <ul class="timeline text-justify">
                   <li>
-                    <div class="card card1">
+                    <div class="card card1 c6">
                       <section class="front" style=" padding: 10px;">
                         <h4><span>2014 </span>Volunteer: Project Citizen, India</h4>
                           <span>About the program:</span>
                           <span>
                             Project Citizen aims to influence public policy and encourage civic participation among students and members of the community. It is an International Civic Education Programme. I was proud to represent a team that worked for sanitation in my district and along with that, we conducted various nukkad nataks for spreading awareness. My team bagged National Level Recognition in the showcasing year of 2014.                        </span>
-                            <br><span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">[CLICK/TOUCH AND HOLD]</span>
+                            <br><span class="btn btn-secondary" style="float: right;margin-top: auto; font-size: 10px;font-family: 'Montserrat', sans-serif;background: black;">Click for More</span>
                       </section>
                       <section class="back text-center" style="background: #fff; margin-top: auto;margin-bottom: auto;">
                         <img src="assets/img/5.png" height="500px">
@@ -1286,4 +1286,84 @@
   }();
 
   
+  </script>
+  <script>
+    $('.c1').click(function(){
+      var p = 0;
+      var myint = setInterval(function() {
+        $(".c1").css("transform","rotateY(180deg)");
+        $(".c1").css("transition-duration","1.5s");
+        p = p+1;
+        if(p==4){
+          $(".c1").css("transform","rotateY(360deg)");
+          $(".c1").css("transition-duration","1.5s");
+          clearInterval(myint);
+        }
+      },1000);
+    });
+    $('.c2').click(function(){
+      var p = 0;
+      var myint = setInterval(function() {
+        $(".c2").css("transform","rotateY(180deg)");
+        $(".c2").css("transition-duration","1.5s");
+        p = p+1;
+        if(p==4){
+          $(".c2").css("transform","rotateY(360deg)");
+          $(".c2").css("transition-duration","1.5s");
+          clearInterval(myint);
+        }
+      },1000);
+    });
+    $('.c3').click(function(){
+      var p = 0;
+      var myint = setInterval(function() {
+        $(".c3").css("transform","rotateY(180deg)");
+        $(".c3").css("transition-duration","1.5s");
+        p = p+1;
+        if(p==4){
+          $(".c3").css("transform","rotateY(360deg)");
+          $(".c3").css("transition-duration","1.5s");
+          clearInterval(myint);
+        }
+      },1000);
+    });
+    $('.c4').click(function(){
+      var p = 0;
+      var myint = setInterval(function() {
+        $(".c4").css("transform","rotateY(180deg)");
+        $(".c4").css("transition-duration","1.5s");
+        p = p+1;
+        if(p==4){
+          $(".c4").css("transform","rotateY(360deg)");
+          $(".c4").css("transition-duration","1.5s");
+          clearInterval(myint);
+        }
+      },1000);
+    });
+    $('.c5').click(function(){
+      var p = 0;
+      var myint = setInterval(function() {
+        $(".c5").css("transform","rotateY(180deg)");
+        $(".c5").css("transition-duration","1.5s");
+        p = p+1;
+        if(p==4){
+          $(".c5").css("transform","rotateY(360deg)");
+          $(".c5").css("transition-duration","1.5s");
+          clearInterval(myint);
+        }
+      },1000);
+    });
+    $('.c6').click(function(){
+      var p = 0;
+      var myint = setInterval(function() {
+        $(".c6").css("transform","rotateY(180deg)");
+        $(".c6").css("transition-duration","1.5s");
+        p = p+1;
+        if(p==4){
+          $(".c6").css("transform","rotateY(360deg)");
+          $(".c6").css("transition-duration","1.5s");
+          clearInterval(myint);
+        }
+      },1000);
+    });
   </script>
