--- a/index.html
+++ b/index.html
@@ -295,6 +295,13 @@
                       <br>If you want to check out my Instagram Account which implements this project, you can go to <u><a href="https://www.instagram.com/track_covid/" target="__blank__"></u>@track_covid</a>.</p>
                   </div>
                 </div>
+                <div class="col-md-4" style="margin-top: auto;margin-bottom: auto;"></div>
+                <div class="col-md-4" style="margin-top: auto;margin-bottom: auto;">
+                  <div class="projects-box text-justify">
+                    <i class="fa fa-magic"></i><span> Magical Pomodoro</span><br>
+                    <p>Magical Pomodoro is a Harry Potter themed Pomodoro application developed using the MERN Stack. The backend API has been deployed on Heroku whereas the frontend has been deployed on Netlify. Material UI has also been utilized to beautify the React Components. EmailJS has been utilized for implementing ‘Forgot your password’ component. Browser throttling to enable smooth working of the timer has also been handled. <br> Check it out <u><a href="https://magicalpomodoro.netlify.app/" target="__blank__"></u>here</a></p>
+                  </div>
+                </div>
               </div>
             </div>
             <div class="text-center text-muted mt-5">For more such projects, refer my <a href="https://github.com/i-aditya-kaushik" target="__blank__">github page.</a></div>
